Ensure text and images of text provide sufficient contrast (#409)

--- a/src/wizard/styles.scss
+++ b/src/wizard/styles.scss
@@ -139,7 +139,7 @@
     }
 
     > li.disabled > a > .title {
-      color: awsui.$color-text-interactive-disabled;
+      color: awsui.$color-text-status-inactive;
     }
 
     > li.enabled > a > .circle {
